tests/ui-nightly/transmute-mut-src-unsized.stderr
error[E0271]: type mismatch resolving `<[u8; 1] as KnownLayout>::PointerMetadata == usize`
  --> tests/ui-nightly/transmute-mut-src-unsized.rs:15:35
   |
15 | const SRC_UNSIZED: &mut [u8; 1] = transmute_mut!(&mut [0u8][..]);
   |                                   ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^ expected `usize`, found `()`
   |
   = note: required for `zerocopy::util::macro_util::Wrap<&mut [u8], &mut [u8; 1]>` to implement `zerocopy::util::macro_util::TransmuteMutDst<'_>`
   = note: this error originates in the macro `transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
